--- a/frontend/src/components/modal.css
+++ b/frontend/src/components/modal.css
@@ -1,6 +1,18 @@
-.modal{
+.modal {
   background-color: white;
   width: 60%;
   height: 60%;
-  border: 2ps solid black
+  border: 2ps solid black;
+}
+.date {
+  width: 350px !important;
+}
+
+nav {
+  display: flex;
+  height: 50px;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 20px;
+  background: aliceblue;
 }
